--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>WatchX Pakistan</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <script src="script.js"></script>
-  </body>
+ <div id="page-wrapper">
+  <header id="header">
+
+   <div class="logo">
+      <img
+        id="header-img"
+        src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+        alt="original trombones logo"
+      />
+    </div>
+
+    <nav id="nav-bar">
+      <ul>
+        <li><a class="nav-link" href="#features">Features</a></li>
+        <li><a class="nav-link" href="#how-it-works">How It Works</a></li>
+        <li><a class="nav-link" href="#pricing">Pricing</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+ </div>
+
+
+    </header>
 </html>
+
+ </body>
